--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/29ce6edb40.js" crossorigin="anonymous"></script>
-    <title>Anandhu Biju</title>
+    <title>Portfolio</title>
 </head>
 <body>
   <!--Navigation-->
